<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:flow_horizontalAlign="center"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.s_start.board.GetStartedActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/p_startimg" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/josefin_sans_semibold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/josefin_slab"
        android:text="@string/start"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="16sp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/josefin_sans_semibold"
        android:padding="8dp"
        android:text="@string/getstart"
        android:textSize="20sp"
        app:cornerRadius="12dp" />
</LinearLayout>