<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:orientation="vertical"
    tools:context=".view.b_busca.BuscaActivity">




        <androidx.cardview.widget.CardView
            android:id="@+id/cardView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/f_outline">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/josefin_sans_semibold"
                    android:text="@string/busca"
                    android:textColor="@color/red"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/buscaNom"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/Recetas"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btBuscaNom" />

                <Button
                    android:id="@+id/btBuscaRand"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:layout_marginBottom="100dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/rand"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buscaNom" />

                <Button
                    android:id="@+id/btBuscaNom"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/PorN"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/f_fond4" />


</androidx.constraintlayout.widget.ConstraintLayout>
